Atualiza notebook com correção de gráfico
Corrige erro da variável 'escolaridade' e gera gráfico final por escolaridade dos pais

--- a/Análise_de_Desempenho_Escolar_com_Python.ipynb
+++ b/Análise_de_Desempenho_Escolar_com_Python.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "_ilV3IPqKTyj"
       },
@@ -90,9 +90,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54884e4d-a84e-4fd3-af42-da707a3f471b"
+        "outputId": "fd0a6c4f-6619-4f55-c039-73c3aa41374f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 453
         },
-        "outputId": "c99e5cae-6062-4bde-8b05-2f7f8c086057"
+        "outputId": "c9b1a024-f5dd-4b68-8e57-05e9915a78fb"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -208,9 +208,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 576
         },
-        "outputId": "c1ca569b-4867-4bac-a7be-a2f47480c775"
+        "outputId": "1817eae8-018d-4192-d754-49f62f4d6f61"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +281,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 576
         },
-        "outputId": "bee1a3d9-ae50-487a-ab94-bf53132117ab"
+        "outputId": "f8bbc7a1-c6b1-4226-8108-0e0a026f9378"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,9 +329,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e4c7c2e-ee80-4794-fdb0-6de185631ef6"
+        "outputId": "a019c7cd-dbfb-4d40-99c4-7815867b62d1"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,17 +359,17 @@
     {
       "cell_type": "code",
       "source": [
-        "pais = df.groupby(\"parental level of education\")[[\"math score\", \"reading score\", \"writing score\"]].mean()\n",
-        "print(pais)"
+        "escolaridade = df.groupby(\"parental level of education\")[[\"math score\", \"reading score\", \"writing score\"]].mean()\n",
+        "print(escolaridade)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LqF-4sRHZcXl",
-        "outputId": "c8deafa8-ac32-42c4-be43-bd3a031e796e"
+        "outputId": "a444ece6-3841-4adb-d61a-3da4752c8ee9"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,9 +415,9 @@
           "height": 607
         },
         "id": "zQdO_m8dQ5b_",
-        "outputId": "0fde04f7-a0d3-463c-bd66-3232d7fce4d7"
+        "outputId": "859083b4-632d-47bf-83c4-daaeb5d0394c"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -454,14 +454,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "zLp8e81YTbTB",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         },
-        "id": "zLp8e81YTbTB",
-        "outputId": "3b48c349-5c7f-44fd-c33d-a145de70340e"
+        "outputId": "a35e19bc-1f1f-4932-8bef-7fc11b307a87"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -498,14 +498,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "OIRYVhR0Th1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         },
-        "id": "OIRYVhR0Th1c",
-        "outputId": "566777f3-81a8-4196-99e6-2da6a33acc4e"
+        "outputId": "02b9a13e-b60e-4552-fe80-587d60f0812f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,13 +537,13 @@
         "print(almoço)"
       ],
       "metadata": {
+        "id": "b300EZ_nURQ0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "b300EZ_nURQ0",
-        "outputId": "cbb39774-b94f-40d5-fec8-b39054759375"
+        "outputId": "af61f92a-8d51-4663-e433-069580125a7f"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,14 +579,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "S2oE-20bUsj2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
         },
-        "id": "S2oE-20bUsj2",
-        "outputId": "194573c0-dfa0-4c06-91c3-f2b5f3650263"
+        "outputId": "26bb0de9-8a63-4688-ec5d-d434cd6cf445"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,14 +622,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "twtk9Z5-UxsH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
         },
-        "id": "twtk9Z5-UxsH",
-        "outputId": "36aa8ede-3c79-4dcd-f963-f61dd1dd596a"
+        "outputId": "5fe187a8-004f-48df-f0ef-7361d1a4b091"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -665,14 +665,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "EU2CwIvkU7GH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
         },
-        "id": "EU2CwIvkU7GH",
-        "outputId": "027ced6b-8f8f-4791-f842-62cc2b34efb2"
+        "outputId": "972c9bdb-0f49-423d-e155-dff714c6b91a"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,13 +704,13 @@
         "print(etnia)\n"
       ],
       "metadata": {
+        "id": "Dxk-KYF5VDWe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Dxk-KYF5VDWe",
-        "outputId": "b17eb342-9be2-4268-e7ec-0656c5e2367c"
+        "outputId": "addf415d-fb9d-4fcb-adbc-db644db0fa3e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,14 +750,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "hft8ofQcVbMA",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
         },
-        "id": "hft8ofQcVbMA",
-        "outputId": "259e50c4-ceef-4e37-86ce-fca9d7d2b761"
+        "outputId": "3cd54af1-e564-48df-b047-0833401d8262"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -794,14 +794,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "-Kc5vMBoVPam",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
         },
-        "id": "-Kc5vMBoVPam",
-        "outputId": "5ac1ad1d-bc8e-4c72-8dd1-616cdd2cf205"
+        "outputId": "b12dc15a-83c1-4da5-a3e2-176754cc788c"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -838,14 +838,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "EY0udfYUVoKQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
         },
-        "id": "EY0udfYUVoKQ",
-        "outputId": "6d66076d-14c0-44b0-8de6-7ecdc49c4267"
+        "outputId": "2bb53faa-02eb-4ef3-c832-7912dbb0a527"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
